ASSERTION FAILED: m_collapsibleLogicalWidth <= m_logicalWidth in WebCore::Layout::InlineContentBreaker::ContinuousContent::append https://bugs.webkit.org/show_bug.cgi?id=231274

Reviewed by Antti Koivisto.

Source/WebCore:

Remove incorrect assertions. They stopped working when negative horizontal margin was enabled for IFC.

Test: fast/inline/negative-margin-with-collapsible-content-assert.html

* layout/formattingContexts/inline/InlineContentBreaker.cpp:
(WebCore::Layout::InlineContentBreaker::ContinuousContent::append):

LayoutTests:

* fast/inline/negative-margin-with-collapsible-content-assert-expected.txt: Added.
* fast/inline/negative-margin-with-collapsible-content-assert.html: Added.


Canonical link: https://commits.webkit.org/242715@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@283835 268f45cc-cd09-0410-ab3c-d52691b4dbfc